Revert "TOC moved to the sidebar on desktop and bottom on mobile (Fix #16)"
This reverts commit 26fa5880e8ed3415540d97e73d75f69010748c87.

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -21,7 +21,7 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    1200px !default;
+$content-width:    1100px !default;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
